# SOMpp

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
omrglue/: BytecodeHelper.cpp  BytecodeHelper.hpp  ObjectModel.hpp  SOMppMethod.cpp  SOMppMethod.hpp
src/: Main.cpp
src/aot/: BufferWriter.hpp  ObjectDeserializer.cpp  ObjectDeserializer.hpp  ObjectSerializer.cpp  ObjectSerializer.hpp  SOMCacheWriter.hpp  SOMObjectVisitor.hpp
src/compiler/: BytecodeGenerator.cpp  BytecodeGenerator.h  Disassembler.cpp  MethodGenerationContext.cpp  MethodGenerationContext.h
src/interpreter/: Interpreter.cpp  Interpreter.h  bytecodes.cpp
src/jit/: SOMppMethod.cpp  SOMppMethod.hpp  SOMppMethod_with_vm_state.cpp  SOMppMethod_with_vm_state.hpp
src/memory/: GenerationalHeap.h  Heap.h  OMRHeap.cpp  OMRHeap.h
src/primitives/: Block.h  SOMString.cpp  System.cpp
src/vm/: DispatchTable.cpp  DispatchTable.h  Universe.cpp  Universe.h
src/vmobjects/: AbstractObject.cpp  AbstractObject.h  ObjectFormats.h  VMArray.h  VMBlock.h  VMClass.cpp  VMClass.h  VMDouble.h  VMEvaluationPrimitive.cpp  VMEvaluationPrimitive.h  VMFrame.cpp  VMFrame.h  VMInteger.h  VMInvokable.cpp  VMInvokable.h  VMInvokableStub.h  VMMethod.cpp  VMMethod.h  VMObject.cpp  VMObject.h  VMObjectBase.h  VMPrimitive.cpp  VMPrimitive.h  VMString.h  VMSymbol.cpp  VMSymbol.h
